--- a/news/2014/03/16/001.mdx
+++ b/news/2014/03/16/001.mdx
@@ -5,23 +5,22 @@ description: "In age of dazzling technological advances and rapidly evolving kno
 author: "Goldenstate"
 date: "2014/03/16"
 ---
+Goldenstate College held its Educators’ Appreciation Night on March 14, 2014, at its campus in Region XII. The event aimed to honor teachers and educational stakeholders for their dedication in preparing students to face an increasingly challenging academic environment shaped by rapid technological advances.
 
-In age of dazzling technological advances and rapidly evolving knowledge, students must be able to know more in order to compete and the task in preparing them to this largely demanding landscape falls to our educators.
+The program opened with remarks from College President Josie Yap-Tirador, MBA, followed by the master of ceremonies, Mr. Ferdinand G. Alcantara, MAED, who acknowledged the presence of guests, stakeholders, principals, and directors from the region.
 
-Educators’ appreciation night is a moment to say thank you to our beloved sectors of education in extending countless efforts in helping the students prepare to a more challenging phase as they enter college soon.
+Dr. Warren A. Manilay, Chief Executive Officer of Goldenstate College, expressed gratitude for the educators’ hard work and commitment. “We are thankful to our partner educators for their enthusiasm and dedication in guiding students toward a brighter future,” he said, highlighting the college’s ongoing collaboration to support the K-12 curriculum transition.
 
-The program opened with the remarks given by the college president, josie yap- tirador, mba. mr. ferdinand g. alcantara, maed, the master of ceremony acknowledged all the guests, stakeholders, principals, and directors of region xii.
+Following this, Dr. Allan G. Farnazo, CESO V and DepEd Regional Director of Region XII, delivered a message of inspiration. Mrs. Sarah Jane Manilay, MBA, Vice President for Finance, alongside Dr. Manilay and President Yap-Tirador, presented plaques of appreciation to recognize contributions made by key speakers.
 
-Dr. warren a. manilay, chief executive officer gave his message of appreciation to the educators for their enthusiasm, hard work, and dedication to their craft. the speech centered on the gratefulness of the goldenstate college family for allowing the school to continually conduct career advocacy and in entrusting the future of their senior students to the school. furthermore, dr. manilay also emphasized on the partnership offered by the school to the educators regarding the k-12 curriculum for the near future.
+Various activities then enlivened the evening, fostering camaraderie among the educators and the Goldenstate College community. The administration expressed deep appreciation to all who attended, affirming their commitment to continuing partnerships with educators in shaping future leaders.
 
-The message of inspiration was then delivered by dr. allan g. farnazo, ceso v, deped regional director of region xii. afterwards, the plaque of appreciation was awarded to the speaker by mrs. sarah jane manilay, mba, vice president for finance, dr. warren a. manilay, the ceo and mrs. josie yap- tirador, the college president. different activities followed to enliven the night.
+Mrs. Josie Yap-Tirador concluded, “Together, we prepare our students to face tomorrow’s challenges with confidence and competence.”
 
-The night’s program was indeed a success to both the educators and the goldenstate college family. with that, the administration was very thankful to all the educators and personalities who had graced the invitation.
+![Happiness and excitement ms. josie yap- tirador, school president in her welcome address during the educators appreciation night.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/educators-night-2014-02.jpg) 
 
-Happiness and excitement ms. josie yap- tirador, school president in her welcome address during the educators appreciation night.
+![Very special visitors the burst of excitement in the eyes and smiles of the educators during the event. ](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/educators-night-2014-03.jpg)
 
-Very special visitors the burst of excitement in the eyes and smiles of the educators during the event.
+![Overwhelming thoughts dr. warren a. manilay, mnsa in his message of appreciation during the educators night 2014.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/educators-night-2014-04.jpg) 
 
-Overwhelming thoughts dr. warren a. manilay, mnsa in his message of appreciation during the educators night 2014.
-
-Inspiring talks madame sara jane manilay, mba (right) and nelida p. asedillo, matesl, principal of glc (left) together with some educators during the event.
+![Inspiring talks madame sara jane manilay, mba (right) and nelida p. asedillo, matesl, principal of glc (left) together with some educators during the event.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/educators-night-2014-05.jpg)
