--- a/news/2014/03/02/001.mdx
+++ b/news/2014/03/02/001.mdx
@@ -6,18 +6,20 @@ author: "Goldenstate"
 date: "2014/03/02"
 ---
 
-In its ardent desire and golden commitment to equip students with the latest updates on the industry practices and to upgrade them on the current technology of ideas, goldenstate college of general santos city held simultaneous seminars among its students last february 8-9, 2014 at its own campus. resource speakers from manila and from deped general santos were invited to conduct the said seminars.
+Goldenstate College of General Santos City conducted simultaneous seminars on February 8–9, 2014, at its campus to provide students with the latest industry practices and upgrade their knowledge on current technologies. Resource speakers from Manila and DepEd General Santos were invited to lead the sessions.
 
-The first seminar, held on the morning of february 8 at room n105, goldenstate campus, was attended by some 20 plus 1st year and 2nd year students of ab english (ab eng) and early childhood education (ece) courses. the seminar aimed to enhance the communication skills of the students thru interactive, communicative, and collaborative methods. it also geared to hone the basic skills of ece students in management, supervision, and teaching early childhood education. ronnie r. sunngay, esp-1 english and imelda martinez served as key speakers of the said seminar. nelida p. asedillo, then retired deped english supervisor, presently the department head of ab english/ece of the said school, facilitated the seminar.
+The first seminar, held on the morning of February 8 in room N105, was attended by over 20 first- and second-year students from the AB English and Early Childhood Education (ECE) programs. The seminar focused on enhancing students’ communication skills through interactive and collaborative methods, as well as developing basic management and teaching skills for ECE students. Ronnie R. Sunngay, ESP-1 English, and Imelda Martinez served as key speakers, while Nelida P. Asedillo, retired DepEd English supervisor and current department head of AB English/ECE, facilitated the event.
 
-The second seminar held on that day entitled “character and personality in business management workplace” and “leadership” was conducted by lorenzo c. lorenzo, mba, dbm, dean of philippine women’s university (pwu) school of business administration in taft avenue, manila, philippines. a pacucoa accreditor himself and an expert in human resource management, dr. lorenzo centered his discussions on mahatma gandhi’s “7 things that would destroy society” on the topic about character and personality. on the other hand, he lectured the “21 principles of leadership” to the bachelor of science in business administration (bsba) students of goldenstate college who were attentively and actively listening to him. the whole day seminar was highlighted with the workshop in the afternoon where the students were grouped together and tasked to report on the assigned activities before the speaker.
+On the same day, a seminar titled “Character and Personality in Business Management Workplace” and “Leadership” was conducted by Dr. Lorenzo C. Lorenzo, MBA, DBM, Dean of the Philippine Women’s University School of Business Administration in Manila. Dr. Lorenzo, a PACUCOA accreditor and human resource management expert, discussed Mahatma Gandhi’s “7 Things That Would Destroy Society” and lectured on the “21 Principles of Leadership” to Bachelor of Science in Business Administration (BSBA) students. The seminar included a workshop where students collaborated in groups to present assigned activities.
 
-The third seminar held on that same day was the abacus reservation system. it was a day and a half event facilitated by rizan s. ritas, mstm, the program chair and ojt coordinator of pwu’s school of tourism. she taught the students the system of abacus reservation which continued until the following morning (sunday). it was participated by the bachelor of science in tourism management (bst) students of the said school.
+The third seminar, which lasted a day and a half, focused on the Abacus Reservation System and was facilitated by Rizan S. Ritas, MSTM, Program Chair and OJT Coordinator of PWU’s School of Tourism. This seminar, held in the HRM laboratory at the SJM building, was attended by Bachelor of Science in Tourism Management (BST) students and continued into the morning of February 9.
 
-Abacus reservation system seminar at hrm laboratory, sjm building with the invited resource speaker rizan s. ritas, mstm.
+“The seminars reflect Goldenstate’s commitment to equipping students with relevant skills and knowledge that will prepare them for the challenges in their fields,” said a college representative.
 
-Abacus reservation system seminar at hrm laboratory, sjm building with the invited resource speaker rizan s. ritas, mstm.
+![Abacus reservation system seminar at hrm laboratory, sjm building with the invited resource speaker rizan s. ritas, mstm.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-seminar-2014-02.jpg)
 
-Character and personality in business management workplace; leadership seminar at multi- purpose building with the invited resource speaker dr. lorenzo c. lorenzo, mba, dbm.
+![Abacus reservation system seminar at hrm laboratory, sjm building with the invited resource speaker rizan s. ritas, mstm.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-seminar-2014-03.jpg)
 
-Communication enhancement and classroom management seminars for ab english and ece students at n- 105 room with the invited resource speakers ronnie r. sunngay, esp- i english and imelda martinez.
+![Character and personality in business management workplace; leadership seminar at multi- purpose building with the invited resource speaker dr. lorenzo c. lorenzo, mba, dbm.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-seminar-2014-04.jpg) 
+
+![Communication enhancement and classroom management seminars for ab english and ece students at n- 105 room with the invited resource speakers ronnie r. sunngay, esp- i english and imelda martinez.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-seminar-2014-05.jpg)
