--- a/news/2014/06/30/001.mdx
+++ b/news/2014/06/30/001.mdx
@@ -1,29 +1,39 @@
 ---
 slug: "goldenstate-college-joins-in-the-celebration-of-cheds-20th-anniversary-wins-the-gold-in-the-booth-competition"
-title: "goldenstate college joins in the celebration of ched’s 20th anniversary, wins the gold in the booth competition"
-description: "Goldenstate college is one with the commission on higher education ro xii in the celebration..."
+title: "Goldenstate College Joins in the Celebration of CHED’s 20th Anniversary, Wins the Gold in the Booth Competition"
+description: "Goldenstate joined CHED RO XII’s 20th anniversary celebration with HEIs across Region XII..."
 author: "Goldenstate"
-date: "2014/06/30"
+date: "2014-06-30"
 ---
 
-Goldenstate college is one with the commission on higher education ro xii in the celebration of its 20th anniversary held last may 19-20, 2014 at koronadal city. it was the first time the commission has celebrated this event with the participation of the different higher education institutions and state universities all over the region.
+Goldenstate College actively participated in the 20th anniversary celebration of the Commission on Higher Education (CHED) Region XII, held on May 19–20, 2014, in Koronadal City. The milestone event marked the first time CHED held a regional celebration involving higher education institutions (HEIs) and state universities across Region XII.
 
-It started with a grand parade and motorcade in the main thoroughfares of koronadal city which ended at the regional office for the formal opening of the event and the much awaited booth competition participated in by the heis in the region. the event was formally opened with the ceremonial ribbon cutting headed by the ched director himself, dr. maximo c. aljibe assisted by the officers and administrators of different colleges and universities.
+The celebration began with a grand parade and motorcade along the main streets of Koronadal, culminating at the CHED Regional Office with a ceremonial ribbon cutting. Dr. Maximo C. Aljibe, CHED Regional Director, officially opened the event, joined by college and university administrators. A key highlight was the much-anticipated booth competition featuring creative exhibits from various HEIs.
 
-More to this was goldenstate college’s triumph in different categories as they were awarded trophies for their outstanding participation in the world food festival held in vietnam and the college’s outreach program for the compostela valley typhoon victims. our ceo himself, dr. warren a. manilay, mnsa was an awardee for being one of the most active officers of the hei association. his trophy was accepted by his son, mr. john ralph t. manilay and the vp for finance mrs. sara jane t. manilay together with the college president mrs. josie yap tirador. the most awaited part of the event was the announcement of the best booth winner of which the trophy was awarded to goldenstate college. the awarding ceremonies was held in the south cotobato gymnasium with a cocktail-dinner party attended by the owners, administrators and presidents of all the colleges and universities in the entire region. it was indeed a victorious evening for goldenstate college.
+Goldenstate College stood out throughout the celebration. The institution earned recognition in multiple categories, including accolades for its participation in the World Food Festival in Vietnam and its outreach program for typhoon victims in Compostela Valley.
 
-The recipients of the different awards during the ched’s 20th anniversary awarding ceremonies at the south cotobato gymnasium with mr. john ralph t. manilay, the development and planning officer of goldenstate college (4th from left).
+“Our efforts in academic and social initiatives are always anchored on the values of service and excellence,” shared Mrs. Josie Yap Tirador, MBA, College President.
 
-Administrators and presidents of differet colleges and state universities all over region 12 during ched’s 20th anniversary awarding ceremonies.
+Dr. Warren A. Manilay, MNSA, CEO of Goldenstate College, was also honored as one of the region’s most active HEI association officers. His award was received by his son, Mr. John Ralph T. Manilay, alongside Vice President for Finance Mrs. Sara Jane T. Manilay and President Tirador.
 
-Goldenstate college award winning booth, with its theme “sharing goldenstate college’s best to the world “ with the lake sebu performing artists and gsc of koronadal guidance advocate mrs. glyne rose legada.
+The celebration concluded with a cocktail dinner and awarding ceremony at the South Cotabato Gymnasium. The pinnacle moment was the announcement of Goldenstate College as the Best Booth Competition winner, earning the gold for its exhibit themed “Sharing Goldenstate College’s Best to the World.”
 
-Our active college president mrs. josie yap tirador (2nd from left) with dr. panawidan of ched (extreme left), our college registrar mrs. connie sabellano and gsc koronadal guidance advocate, ms. glyne rose legada.
+“It’s a proud moment not just for our school but for every student and faculty member who contributed to this achievement,” said Mr. John Ralph T. Manilay, Development and Planning Officer.
 
-Students of goldenstate college of koronadal during the parade and motorcade in the celebration of ched’s 20th anniversary celebration.
+The event highlighted the collaborative spirit and growing excellence of higher education institutions across the region, with Goldenstate College emerging as one of its leading contributors.
 
-Goldenstate college vp for finance mrs. sara jane t. manilay accepting the award from ched’s regional director dr. maximo c. aljibe for the college ‘s participation in the world food festival held in vietnam and the college outreach program for the compostela valley typhoon victim.
+![Award recipients during CHED’s 20th anniversary ceremonies at the South Cotabato Gymnasium, with Mr. John Ralph T. Manilay, Development and Planning Officer of Goldenstate College (4th from left).](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-02.jpg)
 
-Dr. maximo c. aljibe, ched’s regional director (center) with the development and planning officer of goldenstate college , mr. john ralph t. manilay (extreme right) with the president of ramon magsaysay college, mr. cris millado (extreme left).
+![Administrators and presidents of various colleges and state universities in Region XII during CHED’s 20th anniversary awarding ceremonies.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-03.jpg)
 
-Goldentstate college president mrs. josie yap tirador, mba with ched’s regional director dr. maximo c. aljibe.
+![Goldenstate College’s award-winning booth with the theme “Sharing Goldenstate College’s Best to the World,” featuring the Lake Sebu Performing Artists and GSC Koronadal Guidance Advocate Mrs. Glyne Rose Legada.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-04.jpg)
+
+![Goldenstate College President Mrs. Josie Yap Tirador (2nd from left) with CHED’s Dr. Panawidan (far left), College Registrar Mrs. Connie Sabellano, and Ms. Glyne Rose Legada, Guidance Advocate of GSC Koronadal.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-05.jpg)
+
+![Goldenstate College students from the Koronadal campus participating in the parade and motorcade during CHED’s 20th anniversary celebration.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-06.jpg)
+
+![Goldenstate College VP for Finance Mrs. Sara Jane T. Manilay receives an award from CHED Regional Director Dr. Maximo C. Aljibe for the college’s participation in the World Food Festival in Vietnam and its outreach program for typhoon victims in Compostela Valley.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-07.jpg)
+
+![CHED Regional Director Dr. Maximo C. Aljibe (center) with Mr. John Ralph T. Manilay, Goldenstate College Development and Planning Officer (far right), and Mr. Cris Millado, President of Ramon Magsaysay College (far left).](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-08.jpg)
+
+![Goldenstate College President Mrs. Josie Yap Tirador, MBA, with CHED Regional Director Dr. Maximo C. Aljibe.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-09.jpg)
