--- a/news/2014/07/06/001.mdx
+++ b/news/2014/07/06/001.mdx
@@ -1,21 +1,25 @@
 ---
-slug: "go-and-grow-a-million-trees-goldenstate-of-koronadals-advocacy-in-the-preservation-of-our-mother-earth"
-title: "go and grow a million trees! goldenstate of koronadal’s advocacy in the preservation of our mother earth"
-description: "Goldenstate college of koronadal inc. on its 3rd straight year had again joined the city..."
+slug: "goldenstate-of-koronadals-advocacy-in-preserving-our-mother-earth-go-and-grow-a-million-trees"
+title: "Goldenstate of Koronadal’s Advocacy in Preserving Our Mother Earth: Go and Grow a Million Trees!"
+description: "Goldenstate College of Koronadal joined the city government of Koronadal for the third..."
 author: "Goldenstate"
 date: "2014/07/06"
 ---
 
-Goldenstate college of koronadal inc. on its 3rd straight year had again joined the city government of koronadal in its advocacy in creating a newer and greener landscape for the city, thus, taking part in the preservation of our environment and saving our mother earth.
+Goldenstate College of Koronadal joined the city government of Koronadal for the third consecutive year in supporting the city’s environmental advocacy to create a greener and healthier landscape. This effort aligns with the global call for environmental preservation and was part of the Tree Growing Festival 2014 held on June 29, 2014.
 
-Spearheaded by the beloved city mayor peter b. miguel and partnered by the different government agencies and offices as well as the different ngos in the city, all secondary and tertiary colleges and universities actively participated also in this once a year event dubbed as the tree growing festival 2014. the event kicked-off off last june 29, 2014 at the city hall grounds where thousands of participants including the 200 students and faculty and staff members of goldensate college of koronadal converged and witnessed the official ceremonial opening of the festival.
+The event was spearheaded by City Mayor Peter B. Miguel and involved various government agencies, offices, and non-government organizations. Thousands of participants, including 200 students, faculty, and staff members of Goldenstate College, gathered at the City Hall grounds for the festival’s official ceremonial opening.
 
-Immediately thereafter, our students proceeded at their designated area in purok upper cacub where they were supposed to plant seedlings provided by the city government. the faculty and staff of goldenstate college joined also in digging up the grounds where they placed all the seedlings given to them. long trails, muddy walkways, slippery rocks on the rivers were never a hindrance in this once a year worthy activity. truly, this event has been a part of goldenstate college’s program of activities at the start of every school year, for we here at the college always adhere to the call of the world in promoting a greener, newer and safer landscape for us and for the future generations.
+Following the ceremony, Goldenstate students and staff proceeded to Purok Upper Cacub, their designated planting site, where they planted tree seedlings provided by the city government. Faculty and staff actively took part in preparing the soil and planting the seedlings despite challenging conditions such as muddy trails, slippery rocks, and river crossings.
 
-The journey starts here.
+“This yearly event reflects our commitment to environmental stewardship and is integrated into our college’s activities at the start of every school year,” said a college representative. “We believe in promoting a greener, safer, and more sustainable landscape for current and future generations.”
 
-The students trekking the highlands to look for a better place to plant their seedlings.
+The Tree Growing Festival continues to inspire the Goldenstate community to take part in preserving Mother Earth through meaningful action.
 
-Ms. jocelyn abellanosa, bshrm department head digging up the soil for her seedlings.
+![The journey begins as Goldenstate College participants head to the planting site.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/tree-planting-01.jpg)
 
-The college cashier, ms bim andales placing her seedling on its right position.
+![Students trek through the highlands in search of ideal spots for planting their seedlings.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/tree-planting-02.jpg)
+
+![Ms. Jocelyn Abellanosa, BSHRM Department Head, prepares the soil for her seedling.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/tree-planting-05.jpg)
+
+![College Cashier Ms. Bim Andales carefully positions her seedling for planting.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/tree-planting-06.jpg)
