--- a/news/2014/06/30/001.mdx
+++ b/news/2014/06/30/001.mdx
@@ -22,17 +22,21 @@ The celebration concluded with a cocktail dinner and awarding ceremony at the So
 
 The event highlighted the collaborative spirit and growing excellence of higher education institutions across the region, with Goldenstate College emerging as one of its leading contributors.
 
-![Award recipients during CHED’s 20th anniversary ceremonies at the South Cotabato Gymnasium, with Mr. John Ralph T. Manilay, Development and Planning Officer of Goldenstate College (4th from left).](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-02.jpg)
+![Award recipients during CHED’s 20th anniversary at the South Cotabato Gymnasium, with Mr. John Ralph T. Manilay (4th from left), Development and Planning Officer of Goldenstate College.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-02.jpg)
 
-![Administrators and presidents of various colleges and state universities in Region XII during CHED’s 20th anniversary awarding ceremonies.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-03.jpg)
+![College and university administrators from Region XII during CHED’s 20th anniversary awarding ceremonies.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-03.jpg)
 
-![Goldenstate College’s award-winning booth with the theme “Sharing Goldenstate College’s Best to the World,” featuring the Lake Sebu Performing Artists and GSC Koronadal Guidance Advocate Mrs. Glyne Rose Legada.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-04.jpg)
+![Goldenstate College’s gold-winning booth, themed “Sharing Goldenstate College’s Best to the World,” with the Lake Sebu Performing Artists and Ms. Glyne Rose Legada, GSC Koronadal Guidance Advocate.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-04.jpg)
 
-![Goldenstate College President Mrs. Josie Yap Tirador (2nd from left) with CHED’s Dr. Panawidan (far left), College Registrar Mrs. Connie Sabellano, and Ms. Glyne Rose Legada, Guidance Advocate of GSC Koronadal.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-05.jpg)
+![President Mrs. Josie Yap Tirador (2nd from left), with CHED’s Dr. Panawidan (far left), Registrar Mrs. Connie Sabellano, and Ms. Glyne Rose Legada of GSC Koronadal.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-05.jpg)
 
-![Goldenstate College students from the Koronadal campus participating in the parade and motorcade during CHED’s 20th anniversary celebration.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-06.jpg)
+![Goldenstate College students join the motorcade and parade along Koronadal’s main streets during CHED’s 20th anniversary celebration.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-06.jpg)
 
-![Goldenstate College VP for Finance Mrs. Sara Jane T. Manilay receives an award from CHED Regional Director Dr. Maximo C. Aljibe for the college’s participation in the World Food Festival in Vietnam and its outreach program for typhoon victims in Compostela Valley.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-07.jpg)
+![VP for Finance Mrs. Sara Jane T. Manilay accepts an award from CHED Director Dr. Maximo C. Aljibe for Goldenstate’s contributions in Vietnam’s World Food Festival and Compostela Valley outreach.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-07.jpg)
+
+![CHED Director Dr. Maximo C. Aljibe (center), Mr. John Ralph T. Manilay (far right), and Mr. Cris Millado, President of Ramon Magsaysay College (far left).](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-08.jpg)
+
+![Goldenstate College President Mrs. Josie Yap Tirador, MBA, with CHED Regional Director Dr. Maximo C. Aljibe during the awarding ceremonies.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-09.jpg)
 
 ![CHED Regional Director Dr. Maximo C. Aljibe (center) with Mr. John Ralph T. Manilay, Goldenstate College Development and Planning Officer (far right), and Mr. Cris Millado, President of Ramon Magsaysay College (far left).](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-08.jpg)
 
