--- a/news/2014/03/16/001.mdx
+++ b/news/2014/03/16/001.mdx
@@ -17,10 +17,10 @@ Various activities then enlivened the evening, fostering camaraderie among the e
 
 Mrs. Josie Yap-Tirador concluded, “Together, we prepare our students to face tomorrow’s challenges with confidence and competence.”
 
-![Happiness and excitement ms. josie yap- tirador, school president in her welcome address during the educators appreciation night.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/educators-night-2014-02.jpg) 
+![Goldenstate College President Mrs. Josie Yap-Tirador delivers her welcome address during Educators’ Appreciation Night.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/educators-night-2014-02.jpg)
 
-![Very special visitors the burst of excitement in the eyes and smiles of the educators during the event. ](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/educators-night-2014-03.jpg)
+![Educators share smiles and excitement as they are honored during the special event.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/educators-night-2014-03.jpg)
 
-![Overwhelming thoughts dr. warren a. manilay, mnsa in his message of appreciation during the educators night 2014.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/educators-night-2014-04.jpg) 
+![CEO Dr. Warren A. Manilay, MNSA, delivers a heartfelt message of appreciation to the educators.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/educators-night-2014-04.jpg)
 
-![Inspiring talks madame sara jane manilay, mba (right) and nelida p. asedillo, matesl, principal of glc (left) together with some educators during the event.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/educators-night-2014-05.jpg)
+![VP for Finance Mrs. Sarah Jane Manilay, MBA (right), and Principal Nelida P. Asedillo, MATESL (left), with educators during the evening celebration.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/educators-night-2014-05.jpg)
