--- a/news/2014/03/02/001.mdx
+++ b/news/2014/03/02/001.mdx
@@ -6,20 +6,20 @@ author: "Goldenstate"
 date: "2014/03/02"
 ---
 
-Goldenstate College of General Santos City conducted simultaneous seminars on February 8–9, 2014, at its campus to provide students with the latest industry practices and upgrade their knowledge on current technologies. Resource speakers from Manila and DepEd General Santos were invited to lead the sessions.
+Goldenstate College of General Santos City held simultaneous seminars on February 8–9, 2014, at its campus to update students on current industry practices and technologies. Experts from Manila and DepEd General Santos led the sessions.
 
-The first seminar, held on the morning of February 8 in room N105, was attended by over 20 first- and second-year students from the AB English and Early Childhood Education (ECE) programs. The seminar focused on enhancing students’ communication skills through interactive and collaborative methods, as well as developing basic management and teaching skills for ECE students. Ronnie R. Sunngay, ESP-1 English, and Imelda Martinez served as key speakers, while Nelida P. Asedillo, retired DepEd English supervisor and current department head of AB English/ECE, facilitated the event.
+The first seminar took place on the morning of February 8 in room N105. Over 20 first- and second-year students from the AB English and Early Childhood Education (ECE) programs attended. The seminar aimed to improve communication skills through interactive and collaborative methods and to develop ECE students’ management and teaching abilities. Key speakers Ronnie R. Sunngay, ESP-1 English, and Imelda Martinez led the sessions, with facilitation by Nelida P. Asedillo, retired DepEd English supervisor and current department head of AB English/ECE.
 
-On the same day, a seminar titled “Character and Personality in Business Management Workplace” and “Leadership” was conducted by Dr. Lorenzo C. Lorenzo, MBA, DBM, Dean of the Philippine Women’s University School of Business Administration in Manila. Dr. Lorenzo, a PACUCOA accreditor and human resource management expert, discussed Mahatma Gandhi’s “7 Things That Would Destroy Society” and lectured on the “21 Principles of Leadership” to Bachelor of Science in Business Administration (BSBA) students. The seminar included a workshop where students collaborated in groups to present assigned activities.
+Also on February 8, Dr. Lorenzo C. Lorenzo, MBA, DBM, Dean of the Philippine Women’s University School of Business Administration, conducted a seminar titled “Character and Personality in Business Management Workplace” and “Leadership.” Addressing Bachelor of Science in Business Administration (BSBA) students, Dr. Lorenzo discussed Mahatma Gandhi’s “7 Things That Would Destroy Society” and the “21 Principles of Leadership.” The seminar included group workshops where students presented assigned tasks.
 
-The third seminar, which lasted a day and a half, focused on the Abacus Reservation System and was facilitated by Rizan S. Ritas, MSTM, Program Chair and OJT Coordinator of PWU’s School of Tourism. This seminar, held in the HRM laboratory at the SJM building, was attended by Bachelor of Science in Tourism Management (BST) students and continued into the morning of February 9.
+The third seminar focused on the Abacus Reservation System and lasted a day and a half. Facilitated by Rizan S. Ritas, MSTM, Program Chair and OJT Coordinator at PWU’s School of Tourism, the seminar was held in the HRM laboratory at the SJM building. It was attended by Bachelor of Science in Tourism Management (BST) students and extended into the morning of February 9.
 
-“The seminars reflect Goldenstate’s commitment to equipping students with relevant skills and knowledge that will prepare them for the challenges in their fields,” said a college representative.
+“The seminars reflect Goldenstate’s commitment to equipping students with relevant skills and knowledge to prepare them for their future careers,” a college representative said.
 
-![Abacus reservation system seminar at hrm laboratory, sjm building with the invited resource speaker rizan s. ritas, mstm.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-seminar-2014-02.jpg)
+![Abacus Reservation System seminar at the HRM Laboratory, SJM Building, with resource speaker Mr. Rizan S. Ritas, MSTM.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-seminar-2014-02.jpg)
 
-![Abacus reservation system seminar at hrm laboratory, sjm building with the invited resource speaker rizan s. ritas, mstm.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-seminar-2014-03.jpg)
+![Tourism Management students attend the Abacus Reservation System seminar with Mr. Rizan S. Ritas, MSTM.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-seminar-2014-03.jpg)
 
-![Character and personality in business management workplace; leadership seminar at multi- purpose building with the invited resource speaker dr. lorenzo c. lorenzo, mba, dbm.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-seminar-2014-04.jpg) 
+![“Character and Personality in the Business Management Workplace” and “Leadership” seminar at the Multi-Purpose Building, led by Dr. Lorenzo C. Lorenzo, MBA, DBM.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-seminar-2014-04.jpg)
 
-![Communication enhancement and classroom management seminars for ab english and ece students at n- 105 room with the invited resource speakers ronnie r. sunngay, esp- i english and imelda martinez.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-seminar-2014-05.jpg)
+![Communication enhancement and classroom management seminar for AB English and ECE students at Room N105, with resource speakers Mr. Ronnie R. Sunngay, ESP-I English, and Ms. Imelda Martinez.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-seminar-2014-05.jpg)
