--- a/news/2014/09/04/001.mdx
+++ b/news/2014/09/04/001.mdx
@@ -1,29 +1,39 @@
 ---
 slug: "general-santos-acquaintance-party-a-night-of-seemingly-endless-excitement"
-title: "general santos acquaintance party: a night of seemingly endless excitement"
-description: "From the afternoon and well into the night, the atmosphere of this year’s acquaintance party..."
+title: "General Santos Acquaintance Party: A Night of Seemingly Endless Excitement"
+description: "On August 15, 2014, the Anchor Driving Range in General Santos City buzzed with excitement..."
 author: "Goldenstate"
 date: "2014/09/04"
 ---
 
-From the afternoon and well into the night, the atmosphere of this year’s acquaintance party at the anchor driving range was electric with the collective excitement of students, staff, and honored guests. the level of enthusiasm lasted throughout the event, coming to a crescendo at certain points, but overall the buzz could be felt the entire night of august 15, 2014.
+On August 15, 2014, the Anchor Driving Range in General Santos City buzzed with excitement as students, staff, and honored guests gathered for this year’s acquaintance party. The energetic atmosphere lasted from the afternoon well into the night, creating a memorable celebration for everyone involved.
 
-Even the preparation leading up to the event was action-packed. organizing the event was a two-month endeavor headed by m. jen manilay and her team, as well as sir jv manuel, who was in charge of sponsorship acquisitions, and sir jay castorio, the master of ceremonies. “it was an exciting process,” said m. jen of the many hours logged for meetings, phone calls, and simply getting things done for the party. for her and the whole organizing committee, the ultimate goal, in addition to the monetary proceeds for much-needed campus resources, is for students to have fun. “it’s nice to see the enjoyment of the students,” m. jen says, “after all of the hard work of everyone.”.
+Preparations for the event took two months, led by M. Jen Manilay and her team, with Sir JV Manuel handling sponsorships and Sir Jay Castorio serving as master of ceremonies. “It was an exciting process,” said M. Jen, “and it’s rewarding to see students enjoy themselves after all the hard work.”
 
-All of their efforts certainly paid off the next day at the anchor driving range. the event went off to a rousing start with the open jam, as performances from students and other locals were met with the screams of the audience. with a pre-show like this, everyone in attendance was in for a very fun evening.
+The event opened with an open jam featuring student and local performers, setting a lively tone. The formal program began with an invocation, national anthem, school hymn, and a special dance performance by the Sinag Dance Troupe. Faculty members, including some who learned the dance just the day before, joined the troupe in performing a routine to Pharrell’s “Happy,” much to the audience’s delight.
 
-The acquaintance party was officially kicked off with the invocation, national anthem, school hymn, and a special dance performance. the sinag dance troupe, who had been practicing for months, along with members of the faculty (including myself), who had just learned the dance the day before, entertained the still-growing crowd with a peppy routine set to pharrell’s “happy.” for me, it was all a blur, but the audience seemed to like it.
+Next came the battle of the bands, judged by the author and two members of the Cuerdas band, who performed later that evening. Despite light rain, the crowd’s enthusiasm remained high, with students shielding themselves and cheering on their favorite acts.
 
-The general enthusiasm of the students remained at a fever pitch with the start of the battle of the bands. judged by myself along two members of the cuerdas band, who would be performing later, each participating musical act kept the adoring crowd. even as the rain started trickling down, the good times would not cease; the students simply covered their heads with makeshift umbrellas and continued cheering on their favorite contestants.
+Following the raffle, the Cuerdas band took the stage with their energetic ska-infused reggae, igniting the crowd with high-energy performances. When the rain stopped, few seemed to notice, so absorbed were they in the festivities.
 
-After the raffle drawing, the cuerdas band took to the stage and sent the crowd into frenzy with their hyperactive brand of ska-infused reggae. everyone in the crowd was jumping, screaming, and singing along to their favorite songs. around this time the rain stopped, which was very much welcome, not that anyone really seemed to notice.
+The night reached a fever pitch with the arrival of 1:43, a popular boy band whose smooth vocals and charm sent the female audience into a frenzy. Awarded the 2014 GMMSF Most Promising Group, their performance captivated fans throughout the venue.
 
-At the end of the cuerdas band’s first set of the night, there was a brief lull, which in hindsight had been the calm before the storm. the swells of teenage screams sounded abruptly. many of these girls were utterly hysterical, though some thankfully have the self-awareness to grin and laugh about their temporary mania. with all the fevered shrieks and whispers from the girls (and some boys) in the audience, it was quite apparent who was entering the vicinity. then, in the distance, emerged the four maputi chisled adonises known collectively as 1:43. every girl in attendance went ballistic as the boy band was escorted by security to the stage.
+Even after 1:43’s first set, the party continued strong with multiple performances by the Cuerdas band and the awarding of prizes for best dressed and battle of the bands winners. The boy band returned to the stage to the crowd’s delight, while many danced, ate, and took selfies.
 
-When the boys of 1:43 started their performance, it was clear why they were of the objects of affection for so many of the young females in the crowd. the hit group captivated these girls with their smooth vocals, impossibly good looks, and overall affable charm. there was no mystery as to why they were awarded the 2014 gmmsf award for most promising group—the infatuation of their fans in the audience was certainly a good indicator.
+The evening closed with a final round of performances from the Cuerdas band and the Sinag Dance Troupe, as students danced to house music late into the night. The energy and enthusiasm demonstrated by attendees reflected the success of the event and the dedication of the organizing team.
 
-Yet, the elation of the crowd would not fade even after 1:43 left the stage. with cuerdas band performing their second set of the night, the students continued to revel in the evening’s festivities, their activity level seemingly endless. then came the awarding of prizes for best dressed of the night and the winners of the battle of the bands. 1:43 was brought back to the stage, much to the delight of the females in the crowd. then came cuerdas band’s third performance of the night, and sure enough, the crowd continued to dance around, though some decided to stop to eat or take selfies.
+“This year’s acquaintance party was a complete success,” said M. Jen Manilay. “It’s exciting to think about what next year’s celebration will bring, but one thing is certain — everyone had a fantastic time.”
 
-After 1:43 and other guests were presented awards of appreciation and the sinag dance troupe performed for a second time, one would think that the energy of the students would wane. however, with cuerdas band – the hardest-working group i have ever seen and my vote for the mvps of the night other than m. jen, sr. jv, and sr. jay—taking to the stage for their fourth set, the crowd continued their fun. sr. jay even joined in on percussion. with midnight approaching, the students continued to dance to hard-thumping house music, showing almost no signs of exhaustion.
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/acquintance-2014-02.jpg)
 
-Seeing the ostensibly never-ending energy of the students was a sure sign that this year’s acquaintance party was a complete success. the constant state of excitement and enthusiasm of the students in attendance realized the goals of m. jen, sr. jv, sr. jay, and everyone who put so much effort into this night. it will be interesting to see what they will do for next year’s acquaintance party, but there is no doubt that the students, staff, and other guests in attendance will have a good time.
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/acquintance-2014-03.jpg)
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/acquintance-2014-04.jpg)
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/acquintance-2014-05.jpg)
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/acquintance-2014-06.jpg)
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/acquintance-2014-07.jpg)
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/acquintance-2014-08.jpg)
