--- a/news/2014/09/04/001.mdx
+++ b/news/2014/09/04/001.mdx
@@ -3,7 +3,8 @@ slug: "general-santos-acquaintance-party-a-night-of-seemingly-endless-excitement
 title: "General Santos Acquaintance Party: A Night of Seemingly Endless Excitement"
 description: "On August 15, 2014, the Anchor Driving Range in General Santos City buzzed with excitement..."
 author: "Goldenstate"
-date: "2014/09/04"
+date: "2014/08/15"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/acquintance-2014-01.jpg"
 ---
 
 On August 15, 2014, the Anchor Driving Range in General Santos City buzzed with excitement as students, staff, and honored guests gathered for this year’s acquaintance party. The energetic atmosphere lasted from the afternoon well into the night, creating a memorable celebration for everyone involved.
