--- a/news/2014/07/06/001.mdx
+++ b/news/2014/07/06/001.mdx
@@ -4,6 +4,7 @@ title: "Goldenstate of Koronadal’s Advocacy in Preserving Our Mother Earth: Go
 description: "Goldenstate College of Koronadal joined the city government of Koronadal for the third..."
 author: "Goldenstate"
 date: "2014/07/06"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/tree-planting-04.jpg"
 ---
 
 Goldenstate College of Koronadal joined the city government of Koronadal for the third consecutive year in supporting the city’s environmental advocacy to create a greener and healthier landscape. This effort aligns with the global call for environmental preservation and was part of the Tree Growing Festival 2014 held on June 29, 2014.
